# soundcork

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  soundcork.service.example
.github/workflows/: docker-publish.yml  lint.yml  tests.yml
docs/: API_Spec.md  Shutdown_Emulation.md  deployment.md  radio-browser.md  speaker-setup.md  spotify.md
soundcork/: .env.shared  admin.py  bmx.py  config.py  constants.py  datastore.py  devices.py  main.py  marge.py  miniapp.py  spotify_service.py
soundcork/static/css/: main.css  miniapp.css
soundcork/templates/: dashboard.html  login.html  presets.html
soundcork/templates/admin/: _devices_fragment.html  index.html  wait.html
soundcork/tests/: test_admin.py  test_bmx.py  test_datastore.py  test_datastore_account_info.py  test_devices.py  test_marge.py  test_miniapp.py  test_miniapp_dashboard.py  test_speakers.py
soundcork/ui/: speakers.py
