[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "soundcork"
version = "1.2.0"

description = "A replacement server for Bose SoundTouch devices."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

authors = [{ name = "Deborah Kaplan" }, { name = "Allen Petersen" }]
maintainers = [{ name = "Deborah Kaplan" }, { name = "Allen Petersen" }]

requires-python = ">=3.12"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
include-package-data = false
packages = ["soundcork", "soundcork.ui"]

[tool.setuptools.package-data]
soundcork = [
    ".env.shared",
    "media/*",
    "resources/*",
    "static/css/*",
    "static/images/*",
    "static/resources/*",
    "swupdate.xml",
    "templates/*.html",
    "templates/admin/*.html",
]

[tool.black]

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["soundcork"]
combine_as_imports = true
include_trailing_comma = true

[tool.mypy]
plugins = ["pydantic.mypy"]


[tool.pydantic-mypy]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--cov=soundcork", "--cov-report=term-missing:skip-covered"]
testpaths = [
    "soundcork/tests",
]
